tests/parse/error_ituple6.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_ituple(int a) {
  ituple<a> it = {7, 8};  // rank of ituple must be static
}

// CHECK: error: syntax error, unexpected IDENTIFIER, expecting NUM
// CHECK-NOT: error:

